<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:id="@+id/sort_choice"
        android:icon="@drawable/ic_sort"
        android:title="@string/orden"
        app:actionProviderClass="tdp.miranking.MyActionProvider"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"/>

    <item android:id="@+id/eliminar_todo"
        android:title="@string/eliminar_todo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_all"
        android:orderInCategory="200"/>

    <item android:id="@+id/ver_pdf"
        android:title="@string/ver_pdf"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_pdf"
        android:orderInCategory="300"/>

</menu>

