<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mymaincolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.miranking.MainActivity"
        android:background="@color/mymaincolor"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/et_add_name"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/black"
            android:background="@drawable/myborder"
            android:hint="@string/hint_nombre"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/white"
            android:text="@string/valoracion"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rb_add_valuation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="25dp"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/yellow"
            android:numStars="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/mymaincolor">

            <Button
                android:id="@+id/addEntity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="12dp"
                android:text="@string/guardar"
                android:background="@drawable/myborder"
                android:onClick="addEntity"/>

            <Button
                android:id="@+id/btn_verlista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/volver"
                android:background="@drawable/myborder"
                android:onClick="goBack"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>







