<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="10">

    <include android:id="@+id/my_toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">


        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:fillViewport="true"
            android:focusableInTouchMode="true"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:background="@color/white"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp">

                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sv_buscar"
                    android:background="@drawable/myborder"
                    android:queryHint="@string/busqueda"
                    />

                <ListView
                    android:layout_marginTop="16dp"
                    android:id="@+id/lv_lista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:choiceMode="singleChoice"
                    android:background="@drawable/border_listview"
                    android:listSelector="@drawable/list_selector"
                    android:divider="@android:color/black"
                    android:dividerHeight="2dp">
                </ListView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="461dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_agregar"
            android:background="@drawable/button_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:text="@string/nuevo"
            android:layout_weight="0.78"
            android:textColor="@color/white"
            android:padding="4dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btn_editar"
            android:background="@drawable/button_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:text="@string/editar"
            android:layout_weight="0.79"
            android:textColor="@color/white"
            android:padding="4dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btn_eliminar"
            android:background="@drawable/button_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:text="@string/eliminar"
            android:layout_weight="0.72"
            android:textColor="@color/white"
            android:padding="4dp"
            android:minHeight="1dp"
            android:minWidth="1dp"
            android:layout_marginRight="10dp"/>


    </LinearLayout>


</LinearLayout>

